# orchestra

./: .gitignore  AGENTS.md  REVIEW-ai-pipeline.md  ai-delivery-pipeline.yaml  skills-lock.json
.github/workflows/: ai-delivery-pipeline.yml
rust/: Cargo.toml
rust/orchestra-cli/: Cargo.toml
rust/orchestra-cli/src/: main.rs
rust/orchestra-cli/src/cmd/: fractal.rs  mod.rs
specs/066-ts-graph-orchestration/: README.md
ts/: package-lock.json  package.json
ts/graphs/: adversarial.yml  factory.yml  fractal.yml  swarm.yml
