[package]
name = "orchestra-cli"
version = "0.1.0"
edition = "2021"
description = "Orchestra CLI — pipeline execution, fractal decomposition, speculative swarm"

[[bin]]
name = "orchestra"
path = "src/main.rs"

[dependencies]
orchestra-core = { path = "../orchestra-core" }
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
